--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,8 +4,19 @@ body {
 }
 
 .main-container {
+    width: 60%;
+    margin: auto;
+    margin-top: 100px;
+    border-style: groove;
+    border-color: #6272a4;
+    gap: 40px;
+
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.name {
+    color: #ff79c6;
 }
 
