added ico and resume

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,15 @@ body {
     width: 50%;
     height: 100%;
 }
+
+.monero-container {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .name {
     color: #bd93f9;
 }
