finalizing first blog postgit status!

--- a/styles/blog-styles.css
+++ b/styles/blog-styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .blog-list-container {
-    width: 90%;
+    width: 95%;
 }
 .blog-list-title {
     color: #bd93f9;
@@ -39,4 +39,13 @@ body {
     font-size: 1.4em;
     text-decoration: none;
     color: #f8f8f2;
+}
+
+.blog-title {
+    width: 100%;
+    color: #bd93f9;
+}
+.blog-content {
+    font-size: 1.2em;
+    text-indent: 40px;
 }
