--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,12 @@ body {
 .name-container {
     width: 100%;
 }
+.content-container {
+    width: 100%;
+    height: 100%;
+}
 
-.content-container{
+.content-split-container{
     width: 100%;
     display: flex;
     align-items: flex-start;
@@ -31,6 +35,7 @@ body {
 
 .content-left-container {
     width: 50%;
+    height: 100%;
 }
 
 .content-right-container {
@@ -50,17 +55,25 @@ body {
     color: #bd93f9;
 }
 
+.links-list
+
 a {
     color: #f8f8f2;
     text-decoration: none;
 }
 
+a:visited {
+    color: inherit;
+}
+
 h3 {
+    font-size: 20px;
     font-weight: bold;
     margin: 5px;
 }
 
 ul {
+    font-size: 18px;
     margin-top: 5px;
     padding-left: 20px;
     list-style-type: circle;
