--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,11 @@ body {
     height: 100%;
 }
 
+.catchline {
+    font-size: 22px;   
+    text-decoration: none;
+}
+
 .monero-container {
     margin-top: 150px;
     display: flex;
