--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: Georgia, "Times New Roman", serif;
-    color: #f8f8f2;
-    background-color: #282a36;
+    /*color: #f8f8f2;*/
+    color: #ebdbb2;
+    background-color: #282828;
 }
 
 .main-container {
@@ -10,7 +11,7 @@ body {
     width: 600px;
     margin-top: 150px;
     border: solid;
-    border-color: #bd93f9;
+    border-color: #d79921;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,7 +46,9 @@ body {
 
 .catchline {
     font-size: 22px;   
+    /*color: #d79921;*/
     text-decoration: none;
+    color: #ebdbb2; 
 }
 
 .monero-container {
@@ -57,13 +60,14 @@ body {
 }
 
 .name {
-    color: #bd93f9;
+    /*color: #bd93f9;*/
+    color: #d79921;
 }
 
 .links-list
 
 a {
-    color: #f8f8f2;
+    color: #ebdbb2;
     text-decoration: none;
 }
 
@@ -75,6 +79,7 @@ h3 {
     font-size: 20px;
     font-weight: bold;
     margin: 5px;
+    color: #d79921;
 }
 
 ul {
